2010-09-20  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Daniel Bates.

        [GTK] fast/forms/listbox-selection.html fails
        https://bugs.webkit.org/show_bug.cgi?id=45942

        * platform/gtk/Skipped: Unskip test which is now passing.
        * platform/gtk/fast/events/keydown-1-expected.txt: Added.
2010-09-20  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Daniel Bates.

        [GTK] fast/forms/listbox-selection.html fails
        https://bugs.webkit.org/show_bug.cgi?id=45942

        Use the gdkModifersFromJSValue helper to parse all appropriate modifier
        strings in keyDownCallback.

        * DumpRenderTree/gtk/EventSender.cpp:
        (keyDownCallback): Use the gdkModifersFromJSValue instead of duplicating the
        modifier parsing logic.

Canonical link: https://commits.webkit.org/58565@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67860 268f45cc-cd09-0410-ab3c-d52691b4dbfc